// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`notificationReducer reducer should CLEAR_NOTIFICATIONS_DATA 1`] = `
Object {
  "composites": Object {},
  "error": "",
  "notificationCount": 0,
}
`;

exports[`notificationReducer reducer should LOAD_NOTIFICATIONS_SUCCESS 1`] = `
Object {
  "composites": Object {
    "undefined": Object {
      "loading": false,
      "notifications": Array [],
      "paging": Object {},
    },
  },
  "error": undefined,
  "notificationCount": 0,
}
`;

exports[`notificationReducer reducer should LOAD_NOTIFICATIONS_SUCCESS 2`] = `
Object {
  "composites": Object {
    "undefined": Object {
      "loading": false,
      "notifications": Array [],
      "paging": Object {
        "page": 1,
      },
    },
  },
  "error": undefined,
  "notificationCount": 0,
}
`;

exports[`notificationReducer reducer should LOAD_NOTIFICATIONS_SUCCESS for page 2 1`] = `
Object {
  "composites": Object {
    "test": Object {
      "loading": false,
      "notifications": Array [
        1,
        2,
      ],
      "paging": Object {
        "page": 2,
      },
    },
  },
  "error": undefined,
  "notificationCount": 0,
}
`;

exports[`notificationReducer reducer should MARK_NOTIFICATION_READ 1`] = `
Object {
  "composites": Object {
    "a": Object {
      "notifications": Array [
        Object {
          "active": false,
          "id": 0,
        },
        Object {
          "active": true,
          "id": 1,
        },
      ],
    },
    "b": Object {
      "notifications": Array [
        Object {
          "active": true,
          "id": 1,
        },
      ],
    },
  },
  "error": "",
  "notificationCount": 0,
}
`;

exports[`notificationReducer reducer should SAVE_NOTIFICATION_SUCCESS 1`] = `
Object {
  "composites": Object {},
  "error": "",
  "id": 0,
  "notificationCount": 0,
  "payload": Object {},
}
`;

exports[`notificationReducer reducer should UPDATE_NOTIFICATION_COUNT 1`] = `
Object {
  "composites": Object {},
  "error": "",
  "notificationCount": 0,
}
`;

exports[`notificationReducer reducer should return default 1`] = `
Object {
  "composites": Object {},
  "error": "",
  "notificationCount": 0,
}
`;

exports[`notificationReducer reducer should return initialState 1`] = `
Object {
  "composites": Object {},
  "error": "",
  "notificationCount": 0,
}
`;

exports[`notificationReducer reducer should store error in LOAD_NOTIFICATION_FAILED 1`] = `
Object {
  "composites": Object {
    "undefined": Object {
      "error": "Unable to fetch notifications. Pull down to refresh.",
      "loading": false,
    },
  },
  "error": "",
  "notificationCount": 0,
}
`;
